# targeting

./: .gitignore  CRIOLink.cpp  CRIOLink.hpp  CommLink.cpp  CommLink.hpp  Constants.cpp  Constants.hpp  HSVImage.cpp  HSVImage.hpp  Makefile  Makefile.am  README  Rectangle.cpp  Rectangle.hpp  RectangleDetector.cpp  RectangleDetector.hpp  TODO  VideoClient.cpp  VideoClient.hpp  VideoData.cpp  VideoData.hpp  VideoDevice.cpp  VideoDevice.hpp  VideoServer.cpp  VideoServer.hpp  autogen.sh  configure.ac  main.cpp  rectangledetector  rpi-compile.sh
images/2012/: colorlines.xcf
images/2013/calibration-images/: info.txt
src/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp  CRIOLink.cpp  CRIOLink.hpp  CmdLineInterface.cpp  CmdLineInterface.hpp  Constants.cpp  Constants.hpp  GUIManager.cpp  GUIManager.hpp  HSVImage.cpp  HSVImage.hpp  Makefile.am  MultiRectangleProcessor.cpp  MultiRectangleProcessor.hpp  NetworkController.cpp  NetworkController.hpp  Rectangle.cpp  Rectangle.hpp  RectangleDetector.cpp  RectangleDetector.hpp  RectangleProcessor.cpp  RectangleProcessor.hpp  VideoDevice.cpp  VideoDevice.hpp  config.h  config.h.in  main.cpp
test/: Makefile  Rectangle.cpp  Rectangle.hpp  outputcontours.txt  outputsquares.txt  run.sh  squares  squares.cpp
